[tool.poetry]
name = "jupyter-nb"
version = "0.1.0"
description = ""
authors = ["Jeremy Schiemann"]
readme = "README.md"
packages = [{include = "jupyter_nb"}]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.2"
httpx = "^0.25.1"
requests = "^2.31.0"
pydantic = "^2.4.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
